--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,7 +1,7 @@
 .Info{
     text-align: center;
     margin-bottom: 50px;
-    color: #3d3c3b;
+    font-family: DialogInput;
 }
 .Nombre{
     padding: 8px;
@@ -11,4 +11,7 @@
 }
 .Direccion{
     padding: 8px;
+}
+.parrafo{
+    font-family: DialogInput;
 }
